--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,178 +1,142 @@
-container:
-  type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: none, spacing_above: small, col_widths: '{"WIHBNY":25,"JCQVTI":40}',
-    spacing_below: small, background: ''}
-  event_bindings: {}
 components:
-- type: FlowPanel
-  properties: {role: null, spacing: tiny, align: left, tooltip: '', border: '', foreground: '',
-    visible: true, spacing_above: none, spacing_below: none, background: ''}
-  name: flow_panel_2
-  layout_properties: {grid_position: 'HGFGXB,NWXPOO'}
-  components:
-  - type: RadioButton
-    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: d, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, group_name: fix_range, underline: false}
-    name: d
+- components:
+  - event_bindings: {clicked: d_clicked}
     layout_properties: {grid_position: 'JJCFHV,HYAPCB'}
-    event_bindings: {clicked: d_clicked}
-  - type: RadioButton
-    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: w, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, group_name: fix_range, underline: false}
-    name: w
-    layout_properties: {grid_position: 'JJCFHV,MFIRLQ'}
-    event_bindings: {clicked: w_clicked}
-  - type: RadioButton
-    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: m, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, group_name: fix_range, underline: false}
-    name: m
-    layout_properties: {grid_position: 'JJCFHV,TJINLW'}
-    event_bindings: {clicked: m_clicked}
-  - type: RadioButton
-    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: 3m, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, group_name: fix_range, underline: false}
-    name: m3
-    layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
-    event_bindings: {clicked: m3_clicked}
-- type: FlowPanel
-  properties: {role: null, spacing: tiny, align: left, tooltip: '', border: '', foreground: '',
-    visible: true, spacing_above: none, spacing_below: none, background: ''}
-  name: flow_panel_1
-  layout_properties: {grid_position: 'OSHLVW,WIHBNY'}
-  components:
-  - type: RadioButton
-    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: range, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, group_name: fix_range, underline: false}
-    name: r
-    layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
-    event_bindings: {clicked: r_clicked}
-  - name: h0
-    properties: {text: '0', group_name: fix_range}
+    name: d
+    properties: {align: left, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', group_name: fix_range, italic: false, role: null, selected: false, spacing_above: small, spacing_below: small, text: d, tooltip: '', underline: false, value: '', visible: true}
     type: RadioButton
+  - event_bindings: {clicked: w_clicked}
+    layout_properties: {grid_position: 'JJCFHV,MFIRLQ'}
+    name: w
+    properties: {align: left, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', group_name: fix_range, italic: false, role: null, selected: false, spacing_above: small, spacing_below: small, text: w, tooltip: '', underline: false, value: '', visible: true}
+    type: RadioButton
+  - event_bindings: {clicked: m_clicked}
+    layout_properties: {grid_position: 'JJCFHV,TJINLW'}
+    name: m
+    properties: {align: left, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', group_name: fix_range, italic: false, role: null, selected: false, spacing_above: small, spacing_below: small, text: m, tooltip: '', underline: false, value: '', visible: true}
+    type: RadioButton
+  - event_bindings: {clicked: m3_clicked}
+    layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
+    name: m3
+    properties: {align: left, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', group_name: fix_range, italic: false, role: null, selected: false, spacing_above: small, spacing_below: small, text: 3m, tooltip: '', underline: false, value: '', visible: true}
+    type: RadioButton
+  layout_properties: {grid_position: 'HGFGXB,NWXPOO'}
+  name: flow_panel_2
+  properties: {align: left, background: '', border: '', foreground: '', role: null, spacing: tiny, spacing_above: none, spacing_below: none, tooltip: '', visible: true}
+  type: FlowPanel
+- components:
+  - event_bindings: {clicked: r_clicked}
+    layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
+    name: r
+    properties: {align: left, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', group_name: fix_range, italic: false, role: null, selected: false, spacing_above: small, spacing_below: small, text: range, tooltip: '', underline: false, value: '', visible: true}
+    type: RadioButton
+  - event_bindings: {clicked: h0_clicked}
     layout_properties: {}
-    event_bindings: {clicked: h0_clicked}
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', allow_indeterminate: false, visible: true, text: ALL, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, checked: false, underline: false}
-    name: all
+    name: h0
+    properties: {group_name: fix_range, text: '0'}
+    type: RadioButton
+  - event_bindings: {change: zone_change}
     layout_properties: {grid_position: 'SKHQLQ,YLNLBZ'}
-    event_bindings: {change: zone_change}
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: Time FROM - TO, font_size: null, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
+    name: all
+    properties: {align: left, allow_indeterminate: false, background: '', bold: false, border: '', checked: false, enabled: true, font: '', font_size: null, foreground: '', italic: false, role: null, spacing_above: small, spacing_below: small, text: ALL, tooltip: '', underline: false, visible: true}
+    type: CheckBox
+  layout_properties: {grid_position: 'OSHLVW,WIHBNY'}
+  name: flow_panel_1
+  properties: {align: left, background: '', border: '', foreground: '', role: null, spacing: tiny, spacing_above: none, spacing_below: none, tooltip: '', visible: true}
+  type: FlowPanel
+- layout_properties: {grid_position: 'NDJMBI,JCQVTI'}
   name: t_from_to
-  layout_properties: {grid_position: 'NDJMBI,JCQVTI'}
-- type: LinearPanel
-  properties: {}
-  name: linear_panel_1
-  layout_properties: {grid_position: 'DEDTVD,TMPOUV'}
-  components:
-  - type: DatePicker
-    properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
-      placeholder: Date FROM, border: '', enabled: true, foreground: '', visible: true,
-      font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
-      date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
-    name: t_from
-    layout_properties: {}
-    data_bindings:
-    - {property: date, code: 'self.item[''from_date'']', writeback: true}
-    event_bindings: {change: t_from_change}
-- type: DatePicker
-  properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
-    placeholder: Date TO, border: '', enabled: true, foreground: '', visible: true,
-    font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
-    date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
-  name: t_to
-  layout_properties: {grid_position: 'AXUESG,RIPMES'}
-  data_bindings:
-  - {property: date, code: 'self.item[''to_date'']', writeback: true}
-  event_bindings: {change: t_to_change}
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: Time ZONE, font_size: null, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: d_zone
-  layout_properties: {grid_position: 'LGBALO,RCTBGY'}
-- type: DropDown
-  properties:
-    role: null
-    align: full
-    tooltip: ''
-    placeholder: Select Zone
-    border: ''
-    enabled: true
-    foreground: ''
-    items: ['']
-    visible: true
-    font_size: null
-    font: ''
-    spacing_above: none
-    spacing_below: none
-    italic: false
-    background: ''
-    bold: false
-    underline: false
-    include_placeholder: false
-  name: drop_down_1
-  layout_properties: {grid_position: 'GVBMFN,WWZEEE'}
-  data_bindings: []
-  event_bindings: {change: drop_down_1_change}
-- type: DropDown
-  properties:
-    role: null
-    align: full
-    tooltip: ''
-    placeholder: ''
-    border: ''
-    enabled: true
-    foreground: ''
-    items: []
-    visible: true
-    font_size: null
-    font: ''
-    spacing_above: none
-    spacing_below: none
-    italic: false
-    background: ''
-    bold: false
-    underline: false
-    include_placeholder: false
-  name: drop_down_2
-  layout_properties: {grid_position: 'REPJDC,JFXTWE'}
-  event_bindings: {change: drop_down_2_change}
-- name: label_1
-  properties: {text: Slice Time, spacing_above: none, spacing_below: none}
+  properties: {align: left, background: '', bold: false, border: '', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: Time FROM - TO, tooltip: '', underline: false, visible: true}
   type: Label
-  layout_properties: {grid_position: 'TOLMYY,CBSADS'}
-- name: slice_time
+- components:
+  - data_bindings:
+    - {code: 'self.item[''from_date'']', property: date, writeback: true}
+    event_bindings: {change: t_from_change}
+    layout_properties: {}
+    name: t_from
+    properties: {align: left, background: '', bold: false, border: '', date: '', enabled: true, font: '', font_size: null, foreground: '', format: '%Y/%m/%d', italic: false, max_date: '', min_date: '', pick_time: false, placeholder: Date FROM, role: null, spacing_above: none, spacing_below: none, tooltip: '', underline: false, visible: true}
+    type: DatePicker
+  layout_properties: {grid_position: 'DEDTVD,TMPOUV'}
+  name: linear_panel_1
+  properties: {}
+  type: LinearPanel
+- data_bindings:
+  - {code: 'self.item[''to_date'']', property: date, writeback: true}
+  event_bindings: {change: t_to_change}
+  layout_properties: {grid_position: 'AXUESG,RIPMES'}
+  name: t_to
+  properties: {align: left, background: '', bold: false, border: '', date: '', enabled: true, font: '', font_size: null, foreground: '', format: '%Y/%m/%d', italic: false, max_date: '', min_date: '', pick_time: false, placeholder: Date TO, role: null, spacing_above: none, spacing_below: none, tooltip: '', underline: false, visible: true}
+  type: DatePicker
+- layout_properties: {grid_position: 'LGBALO,RCTBGY'}
+  name: d_zone
+  properties: {align: left, background: '', bold: false, border: '', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: Time ZONE, tooltip: '', underline: false, visible: true}
+  type: Label
+- data_bindings: []
+  event_bindings: {change: drop_down_1_change}
+  layout_properties: {grid_position: 'GVBMFN,WWZEEE'}
+  name: drop_down_1
+  properties:
+    align: full
+    background: ''
+    bold: false
+    border: ''
+    enabled: true
+    font: ''
+    font_size: null
+    foreground: ''
+    include_placeholder: false
+    italic: false
+    items: ['']
+    placeholder: Select Zone
+    role: null
+    spacing_above: none
+    spacing_below: none
+    tooltip: ''
+    underline: false
+    visible: true
+  type: DropDown
+- event_bindings: {change: drop_down_2_change}
+  layout_properties: {grid_position: 'REPJDC,JFXTWE'}
+  name: drop_down_2
+  properties:
+    align: full
+    background: ''
+    bold: false
+    border: ''
+    enabled: true
+    font: ''
+    font_size: null
+    foreground: ''
+    include_placeholder: false
+    italic: false
+    items: []
+    placeholder: ''
+    role: null
+    spacing_above: none
+    spacing_below: none
+    tooltip: ''
+    underline: false
+    visible: true
+  type: DropDown
+- layout_properties: {grid_position: 'TOLMYY,CBSADS'}
+  name: label_1
+  properties: {spacing_above: none, spacing_below: none, text: Slice Time}
+  type: Label
+- event_bindings: {change: slice_time_change, show: slice_time_show}
+  layout_properties: {grid_position: 'ALYYSX,KONRIS'}
+  name: slice_time
   properties:
     items: [None, '1', '2', '3', '4', '6']
     spacing_above: none
     spacing_below: none
   type: DropDown
-  layout_properties: {grid_position: 'ALYYSX,KONRIS'}
-  event_bindings: {change: slice_time_change, show: slice_time_show}
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: null, font: '', spacing_above: none, icon_align: left, spacing_below: none,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
+- layout_properties: {grid_position: 'PUGOQO,DBXZOP'}
   name: msg
-  layout_properties: {grid_position: 'PUGOQO,DBXZOP'}
-is_package: true
+  properties: {align: left, background: '', bold: false, border: '', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '', tooltip: '', underline: false, visible: true}
+  type: Label
+container:
+  event_bindings: {}
+  properties: {background: '', border: '', col_spacing: none, col_widths: '{"WIHBNY":25,"JCQVTI":40}', foreground: '', role: null, spacing_above: small, spacing_below: small, tooltip: '', visible: true, wrap_on: mobile}
+  type: ColumnPanel
 custom_component: true
+is_package: true
