--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -1,69 +1,47 @@
-container:
-  type: DataRowPanel
-  properties: {role: 0height, align: left, tooltip: '', border: '', foreground: '',
-    auto_display_data: true, visible: true, font_size: null, font: '', spacing_above: none,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false}
 components:
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 20, font: '', spacing_above: none, icon_align: left, spacing_below: none,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
-  name: lb_1
+- data_bindings:
+  - {code: 'self.item["date"]', property: text}
   layout_properties: {column: LAVQQZ}
-  data_bindings:
-  - {property: text, code: 'self.item["date"]'}
-- type: Label
-  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '222', font_size: 20, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: lb_2
+  name: lb_1
+  properties: {align: left, background: '', bold: false, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '', tooltip: '', underline: false, visible: true}
+  type: Label
+- data_bindings:
+  - {code: 'self.item[''sys'']', property: text}
   layout_properties: {column: APQHOG}
-  data_bindings:
-  - {property: text, code: 'self.item[''sys'']'}
-- type: Label
-  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '123', font_size: 20, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: lb_3
+  name: lb_2
+  properties: {align: center, background: '', bold: false, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '222', tooltip: '', underline: false, visible: true}
+  type: Label
+- data_bindings:
+  - {code: 'self.item[''dia'']', property: text}
   layout_properties: {column: GCJKIU}
-  data_bindings:
-  - {property: text, code: 'self.item[''dia'']'}
-- type: Label
-  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '', font_size: 20, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: lb_4
+  name: lb_3
+  properties: {align: center, background: '', bold: false, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '123', tooltip: '', underline: false, visible: true}
+  type: Label
+- data_bindings:
+  - {code: 'self.item[''pul'']', property: text}
   layout_properties: {column: VZPVKB}
-  data_bindings:
-  - {property: text, code: 'self.item[''pul'']'}
-- type: Label
-  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '', font_size: 20, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: true, underline: false,
-    icon: ''}
-  name: lb_5
+  name: lb_4
+  properties: {align: center, background: '', bold: false, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '', tooltip: '', underline: false, visible: true}
+  type: Label
+- data_bindings:
+  - {code: 'self.item[''mean'']', property: text}
   layout_properties: {column: XTQSTS}
-  data_bindings:
-  - {property: text, code: 'self.item[''mean'']'}
-- type: Link
-  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: none,
-    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
-  name: link_1
-  layout_properties: {column: MDFTDB}
-  event_bindings: {click: link_1_click}
-  components:
-  - type: Label
-    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-      visible: true, text: '  ', font_size: 20, font: '', spacing_above: none, icon_align: left,
-      spacing_below: none, italic: false, background: '', bold: true, underline: false,
-      icon: ''}
-    name: lb_6
+  name: lb_5
+  properties: {align: center, background: '', bold: true, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '', tooltip: '', underline: false, visible: true}
+  type: Label
+- components:
+  - data_bindings:
+    - {code: 'self.item[''afib'']', property: text}
     layout_properties: {column: MDFTDB, grid_position: 'FFNDIU,MDANAH'}
-    data_bindings:
-    - {property: text, code: 'self.item[''afib'']'}
+    name: lb_6
+    properties: {align: center, background: '', bold: true, border: '', font: '', font_size: 20, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: none, spacing_below: none, text: '  ', tooltip: '', underline: false, visible: true}
+    type: Label
+  event_bindings: {click: link_1_click}
+  layout_properties: {column: MDFTDB}
+  name: link_1
+  properties: {align: left, background: '', bold: false, border: '', col_spacing: none, col_widths: '{}', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: small, spacing_below: small, text: '', tooltip: '', underline: false, url: '', visible: true, wrap_on: mobile}
+  type: Link
+container:
+  properties: {align: left, auto_display_data: true, background: '', bold: false, border: '', font: '', font_size: null, foreground: '', italic: false, role: 0height, spacing_above: none, spacing_below: none, tooltip: '', underline: false, visible: true}
+  type: DataRowPanel
 is_package: true
