--- a/client_code/Test/form_template.yaml
+++ b/client_code/Test/form_template.yaml
@@ -1,75 +1,69 @@
-is_package: true
-container:
-  type: HtmlTemplate
-  properties: {html: '@theme:standard-page.html'}
 components:
-- type: ColumnPanel
-  properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-    spacing_below: small, background: ''}
-  name: content_panel
-  layout_properties: {slot: default}
-  components:
-  - type: ColumnPanel
-    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-      spacing_below: small, background: ''}
-    name: column_panel_1
-    layout_properties: {grid_position: 'CEWQQC,JOUPRC'}
-    components:
-    - type: DataGrid
-      properties:
-        columns:
-        - {id: DYUPQR, title: Column 1, data_key: column_1}
-        - {id: FUDLJZ, title: Column 2, data_key: column_2}
-        - {id: ROOUBQ, title: Column 3, data_key: column_3}
-      name: data_grid_1
-      layout_properties: {grid_position: 'EFTOAA,HIRAGB'}
-      components:
-      - type: RepeatingPanel
-        properties: {spacing_above: none, spacing_below: none, item_template: Test.RowTemplate6}
+- components:
+  - components:
+    - components:
+      - layout_properties: {}
         name: repeating_panel_1
-        layout_properties: {}
-  - type: ColumnPanel
-    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-      spacing_below: small, background: ''}
-    name: column_panel_2
-    layout_properties: {grid_position: 'CEWQQC,TZWVAF'}
-    components:
-    - type: DataGrid
+        properties: {item_template: Test.RowTemplate6, spacing_above: none, spacing_below: none}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'EFTOAA,HIRAGB'}
+      name: data_grid_1
       properties:
-        role: null
         columns:
-        - {id: GOXKCZ, title: Column 1, data_key: column_1, $$hashKey: 'object:5041'}
-        - {id: DCJIVT, title: Column 2, data_key: column_2, $$hashKey: 'object:5042'}
-        - {id: IVTYTY, title: Column 3, data_key: column_3, $$hashKey: 'object:5043'}
-        - {id: XCZAWR, title: Column 4, data_key: column_4, $$hashKey: 'object:5082'}
-        - {id: XMSTMT, title: Column 5, data_key: column_5, $$hashKey: 'object:5084'}
-        - {id: WBDMMY, title: Column 6, data_key: column_6, $$hashKey: 'object:5086'}
-        - {id: NIJGZM, title: Column 7, data_key: column_7, $$hashKey: 'object:5088'}
-        - {id: PHVIDF, title: Column 8, data_key: column_8, $$hashKey: 'object:5090'}
-        - {id: XADEEP, title: Column 9, data_key: column_9, $$hashKey: 'object:5092'}
-        - {id: KTPMCJ, title: Column 10, data_key: column_10, $$hashKey: 'object:5094'}
+        - {data_key: column_1, id: DYUPQR, title: Column 1}
+        - {data_key: column_2, id: FUDLJZ, title: Column 2}
+        - {data_key: column_3, id: ROOUBQ, title: Column 3}
+      type: DataGrid
+    layout_properties: {grid_position: 'CEWQQC,JOUPRC'}
+    name: column_panel_1
+    properties: {background: '', border: '', col_spacing: medium, col_widths: '{}', foreground: '', role: outlined-card, spacing_above: small, spacing_below: small, tooltip: '', visible: true, wrap_on: mobile}
+    type: ColumnPanel
+  - components:
+    - components:
+      - layout_properties: {}
+        name: repeating_panel_2
+        properties: {item_template: Test.RowTemplate7, spacing_above: none, spacing_below: none}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'ULTICR,DOSRUB'}
+      name: data_grid_2
+      properties:
         auto_header: true
-        tooltip: ''
+        background: ''
         border: ''
+        columns:
+        - {$$hashKey: 'object:5041', data_key: column_1, id: GOXKCZ, title: Column 1}
+        - {$$hashKey: 'object:5042', data_key: column_2, id: DCJIVT, title: Column 2}
+        - {$$hashKey: 'object:5043', data_key: column_3, id: IVTYTY, title: Column 3}
+        - {$$hashKey: 'object:5082', data_key: column_4, id: XCZAWR, title: Column 4}
+        - {$$hashKey: 'object:5084', data_key: column_5, id: XMSTMT, title: Column 5}
+        - {$$hashKey: 'object:5086', data_key: column_6, id: WBDMMY, title: Column 6}
+        - {$$hashKey: 'object:5088', data_key: column_7, id: NIJGZM, title: Column 7}
+        - {$$hashKey: 'object:5090', data_key: column_8, id: PHVIDF, title: Column 8}
+        - {$$hashKey: 'object:5092', data_key: column_9, id: XADEEP, title: Column 9}
+        - {$$hashKey: 'object:5094', data_key: column_10, id: KTPMCJ, title: Column 10}
         foreground: ''
+        role: null
         rows_per_page: 20
-        visible: true
-        wrap_on: never
         show_page_controls: true
         spacing_above: small
         spacing_below: small
-        background: ''
-      name: data_grid_2
-      layout_properties: {grid_position: 'ULTICR,DOSRUB'}
-      components:
-      - type: RepeatingPanel
-        properties: {spacing_above: none, spacing_below: none, item_template: Test.RowTemplate7}
-        name: repeating_panel_2
-        layout_properties: {}
-- type: FlowPanel
-  properties: {}
+        tooltip: ''
+        visible: true
+        wrap_on: never
+      type: DataGrid
+    layout_properties: {grid_position: 'CEWQQC,TZWVAF'}
+    name: column_panel_2
+    properties: {background: '', border: '', col_spacing: medium, col_widths: '{}', foreground: '', role: outlined-card, spacing_above: small, spacing_below: small, tooltip: '', visible: true, wrap_on: mobile}
+    type: ColumnPanel
+  layout_properties: {slot: default}
+  name: content_panel
+  properties: {background: '', border: '', col_spacing: medium, col_widths: '{}', foreground: '', role: outlined-card, spacing_above: small, spacing_below: small, tooltip: '', visible: true, wrap_on: mobile}
+  type: ColumnPanel
+- layout_properties: {slot: nav-right}
   name: navbar_links
-  layout_properties: {slot: nav-right}
+  properties: {}
+  type: FlowPanel
+container:
+  properties: {html: '@theme:standard-page.html'}
+  type: HtmlTemplate
+is_package: true
