--- a/client_code/afibs_g/form_template.yaml
+++ b/client_code/afibs_g/form_template.yaml
@@ -1,33 +1,33 @@
-container:
-  type: ColumnPanel
-  properties: {col_widths: '{}'}
 components:
-- type: DataGrid
+- components:
+  - layout_properties: {}
+    name: repeating_panel_1
+    properties: {item_template: afibs_g.RowTemplate2, spacing_above: none, spacing_below: none}
+    type: RepeatingPanel
+  layout_properties: {grid_position: 'UJSFGC,WJIGBO'}
+  name: data_grid_1
   properties:
-    role: null
-    columns:
-    - {id: KRPNBN, title: Date, data_key: date, width: '', expand: false, $$hashKey: 'object:16285'}
-    - {id: ZCJQTX, title: SYS, data_key: sys, $$hashKey: 'object:16286'}
-    - {id: HXGXZT, title: DIA, data_key: dia, $$hashKey: 'object:16287'}
-    - {id: XRPENA, title: PUL, data_key: pul, $$hashKey: 'object:16325'}
-    - {id: XCGAGU, title: MEAN, data_key: mean, $$hashKey: 'object:16327'}
     auto_header: true
-    tooltip: ''
+    background: ''
     border: ''
+    columns:
+    - {$$hashKey: 'object:16285', data_key: date, expand: false, id: KRPNBN, title: Date, width: ''}
+    - {$$hashKey: 'object:16286', data_key: sys, id: ZCJQTX, title: SYS}
+    - {$$hashKey: 'object:16287', data_key: dia, id: HXGXZT, title: DIA}
+    - {$$hashKey: 'object:16325', data_key: pul, id: XRPENA, title: PUL}
+    - {$$hashKey: 'object:16327', data_key: mean, id: XCGAGU, title: MEAN}
     foreground: ''
+    role: null
     rows_per_page: 20
-    visible: true
-    wrap_on: never
     show_page_controls: true
     spacing_above: small
     spacing_below: small
-    background: ''
-  name: data_grid_1
-  layout_properties: {grid_position: 'UJSFGC,WJIGBO'}
-  components:
-  - type: RepeatingPanel
-    properties: {spacing_above: none, spacing_below: none, item_template: afibs_g.RowTemplate2}
-    name: repeating_panel_1
-    layout_properties: {}
-is_package: true
+    tooltip: ''
+    visible: true
+    wrap_on: never
+  type: DataGrid
+container:
+  properties: {col_widths: '{}', visible: true}
+  type: ColumnPanel
 custom_component: true
+is_package: true
