--- a/client_code/imp/form_template.yaml
+++ b/client_code/imp/form_template.yaml
@@ -1,54 +1,51 @@
-container:
-  type: ColumnPanel
-  properties: {col_widths: '{}'}
 components:
-- type: LinearPanel
-  properties: {}
-  name: linear_panel_1
-  layout_properties: {grid_position: 'NTQGSG,SHBFNF'}
-  components:
-  - type: FileLoader
+- components:
+  - event_bindings: {change: file_loader_1_change, lost_focus: file_loader_1_lost_focus}
+    layout_properties: {}
+    name: file_loader_1
     properties:
-      role: tonal-button
-      show_state: true
       align: left
-      tooltip: ''
-      border: ''
-      file_types: csv
-      enabled: true
-      files: []
-      foreground: ''
-      visible: true
-      text: Import
-      font_size: null
-      font: ''
-      spacing_above: small
-      icon_align: left
-      spacing_below: small
-      italic: false
-      file: null
       background: ''
       bold: true
-      underline: false
-      multiple: false
+      border: ''
+      enabled: true
+      file: null
+      file_types: csv
+      files: []
+      font: ''
+      font_size: null
+      foreground: ''
       icon: fa:download
-    name: file_loader_1
-    layout_properties: {}
-    event_bindings: {change: file_loader_1_change, lost_focus: file_loader_1_lost_focus}
-  - type: Label
-    properties: {role: input-prompt, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: .CSV file, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
+      icon_align: left
+      italic: false
+      multiple: false
+      role: tonal-button
+      show_state: true
+      spacing_above: small
+      spacing_below: small
+      text: Import
+      tooltip: ''
+      underline: false
+      visible: true
+    type: FileLoader
+  - layout_properties: {}
     name: label_1
-    layout_properties: {}
-  - type: Label
-    properties: {}
+    properties: {align: left, background: '', bold: false, border: '', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: input-prompt, spacing_above: small, spacing_below: small, text: .CSV file, tooltip: '', underline: false, visible: true}
+    type: Label
+  - layout_properties: {}
     name: last
-    layout_properties: {}
-- type: Timer
+    properties: {}
+    type: Label
+  layout_properties: {grid_position: 'NTQGSG,SHBFNF'}
+  name: linear_panel_1
   properties: {}
+  type: LinearPanel
+- event_bindings: {tick: timer_1_tick}
   name: timer_1
-  event_bindings: {tick: timer_1_tick}
-is_package: true
+  properties: {}
+  type: Timer
+container:
+  properties: {col_widths: '{}'}
+  type: ColumnPanel
 custom_component: true
+is_package: true
